--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 log = { version = "^0.4.17", features = ["std"] }
+log4rs = "1.3"
 tokio = { version = "1", features = ["full"] }
-reqwest = "0.12"
+reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+anyhow = "1.0"
 time = { version = "^0.3.16", features = ["formatting", "local-offset", "macros"], optional = true }
